--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/tailwind": "^5.0.0",
     "@astrojs/vue": "^5.1.0",
-    "@tailwindcss/vite": "^4.1.10",
     "astro": "^5.10.1",
-    "tailwindcss": "^4.1.10",
     "vue": "^3.5.17"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.17"
   }
 }
