--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.0.0",
     "@astrojs/vue": "^5.1.0",
+    "aos": "^2.3.4",
     "astro": "^5.10.1",
     "vue": "^3.5.17"
   },
